# idLib

./: .gitignore  Base64.cpp  Base64.h  BitMsg.cpp  BitMsg.h  CMakeLists.txt  CVarSystem.cpp  CVarSystem.h  CmdArgs.cpp  CmdSystem.cpp  CmdSystem.h  Dict.cpp  Dict.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  Heap.cpp  Heap.h  LangDict.cpp  LangDict.h  Lexer.cpp  Lexer.h  Lib.cpp  Lib.h  MapFile.cpp  MapFile.h  Parser.cpp  Parser.h  Platform.h  RectAllocator.cpp  Str.cpp  Str.h  StrStatic.h  Swap.h  Timer.cpp  Timer.h  Token.cpp  Token.h  precompiled.cpp  (+3 more)
bv/: Bounds.cpp  Bounds.h  Box.cpp  Box.h  Frustum.cpp  Frustum.h  Sphere.cpp  Sphere.h
collision/: CollisionModel.h  CollisionModel_contacts.cpp  CollisionModel_contents.cpp  CollisionModel_debug.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h  CollisionModel_rotate.cpp  CollisionModel_trace.cpp  CollisionModel_translate.cpp
containers/: HashIndex.cpp  HashIndex.h  HashTable.h  Hierarchy.h  List.h  PlaneSet.h  Sort.h  StrList.h  StrPool.h  VectorSet.h
geometry/: DrawVert.cpp  DrawVert.h  JointTransform.cpp  JointTransform.h  Surface.cpp  Surface.h  Surface_Patch.cpp  Surface_Patch.h  Surface_Polytope.cpp  Surface_Polytope.h  Surface_SweptSpline.cpp  Surface_SweptSpline.h  TraceModel.cpp  TraceModel.h  Winding.cpp  Winding.h  Winding2D.cpp  Winding2D.h
hashing/: CRC32.cpp  MD5.cpp
math/: Angles.cpp  Angles.h  Complex.cpp  Complex.h  Curve.h  Extrapolate.h  Interpolate.h  Lcp.cpp  Lcp.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Ode.cpp  Plane.cpp  Plane.h  Pluecker.cpp  Pluecker.h  Polynomial.cpp  Polynomial.h  Quat.cpp  Quat.h  Random.h  Rotation.cpp  Rotation.h  Simd.cpp  Simd.h  Simd_3DNow.cpp  Simd_3DNow.h  Simd_AltiVec.cpp  Simd_AltiVec.h  Simd_Generic.cpp  Simd_Generic.h  Simd_MMX.cpp  Simd_MMX.h  Simd_SSE.cpp  Simd_SSE.h  Simd_SSE2.cpp  Simd_SSE2.h  Simd_SSE3.cpp  (+4 more)
tools/: compiler_public.h  main.cpp  main_posix.cpp  precompiled.cpp  precompiled.h  stubs.cpp  stubs.h
tools/aas/: AASBuild.cpp  AASBuild_file.cpp  AASBuild_gravity.cpp  AASBuild_ledge.cpp  AASBuild_local.h  AASBuild_merge.cpp  AASCluster.cpp  AASCluster.h  AASReach.cpp  AASReach.h  Brush.cpp  Brush.h  BrushBSP.cpp  BrushBSP.h
tools/rogmap/: ColorUtils.cpp  dmap.cpp  dmap.h  facebsp.cpp  glfile.cpp  leakfile.cpp  map.cpp  optimize.cpp  output.cpp  portals.cpp  renderlight.cpp  tritjunction.cpp  tritools.cpp  ubrush.cpp  usurface.cpp
